Footer with lines and button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <svg class="chart"></svg>
         </div>
     </div>
+    <div class="page-footer">
+        <div class="lines">
+            <hr class="line-1"/>
+            <hr class="line-2"/>
+        </div>
+        <a class="button" href="#">Рассказать друзьям</a>
+    </div>
 </div>
 
 
