--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 <div class="page">
     <div class="page-header">
-
+        <a href="#" class="link left-link">Церимония<br/>открытия</a>
+        <a href="#" class="link right-link">Церимония<br/>закрытия</a>
     </div>
     <div class="chart-background">
         <div class="chart-wrapper">
@@ -26,7 +27,7 @@
             <hr class="line-1"/>
             <hr class="line-2"/>
         </div>
-        <a class="button" href="#">Рассказать друзьям</a>
+        <a class="button" href="/">Рассказать друзьям</a>
     </div>
 </div>
 
