Button link fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <hr class="line-1"/>
             <hr class="line-2"/>
         </div>
-        <a class="button" href="/">Рассказать друзьям</a>
+        <a class="button" href="http://atomaltera.github.io/olimpic-chart/">Рассказать друзьям</a>
     </div>
 </div>
 
