--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 <div class="page">
     <div class="page-header">
-        <a href="#" class="link left-link">Церимония<br/>открытия</a>
-        <a href="#" class="link right-link">Церимония<br/>закрытия</a>
+        <a href="#" class="link left-link">Церемония<br/>открытия</a>
+        <a href="#" class="link right-link">Церемония<br/>закрытия</a>
     </div>
     <div class="chart-background">
         <div class="chart-wrapper">
             <div class="title">
-                Популярность видов спорта
+                Популярность<br/>видов спорта
             </div>
             <svg class="chart"></svg>
         </div>
