--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="styles/style.css"/>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="data.js"></script>
@@ -32,7 +32,7 @@
 </div>
 
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
